--- a/assets/package.json
+++ b/assets/package.json
@@ -5,11 +5,14 @@
     "bootstrap": "^5.1.0",
     "choices.js": "^9.0.1",
     "nprogress": "^0.2.0",
-    "topbar": "^1.0.1",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "topbar": "^1.0.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.2"
   }
 }
