--- a/assets/package.json
+++ b/assets/package.json
@@ -3,6 +3,7 @@
     "@popperjs/core": "^2.9.3",
     "@types/node": "^16.7.2",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
     "choices.js": "^9.0.1",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
