Issue with building CSS

--- a/assets/package.json
+++ b/assets/package.json
@@ -18,6 +18,6 @@
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "deploy": "NODE_ENV=production postcss css/app.css -o ../priv/static/assets/app.css"
+    "deploy": "NODE_ENV=production tailwindcss --postcss --minify --input=css/app.css --output=../priv/static/assets/app.css"
   }
 }
