--- a/assets/package.json
+++ b/assets/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.4",
     "alpinejs": "^3.4.2",
+    "chart.js": "^3.6.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
