--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
     "tailwindcss": "^2.2.17"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
     "alpinejs": "^3.4.2",
     "chart.js": "^3.6.0",
