--- a/assets/package.json
+++ b/assets/package.json
@@ -1,25 +1,10 @@
 {
-  "devDependencies": {
-    "@types/phoenix": "^1.5.3",
-    "@types/phoenix_live_view": "^0.15.1",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.0.1",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^3.0.7"
-  },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "alpinejs": "^3.7.1",
-    "chart.js": "^3.6.0",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "topbar": "^1.0.1",
-    "typescript": "^4.5.4"
-  },
-  "scripts": {
-    "deploy": "NODE_ENV=production tailwindcss --postcss --minify --input=css/app.css --output=../priv/static/assets/app.css"
+    "alpinejs": "^3.12.0",
+    "chart.js": "^4.2.1",
+    "phoenix": "../deps/phoenix",
+    "phoenix_html": "../deps/phoenix_html",
+    "phoenix_live_view": "../deps/phoenix_live_view",
+    "topbar": "^2.0.1"
   }
 }
